--- a/emake-modules/pom.xml
+++ b/emake-modules/pom.xml
@@ -11,8 +11,8 @@
     <name>emake-modules</name>
 
     <parent>
-        <groupId>com.github</groupId>
-        <artifactId>emake</artifactId>
+        <groupId>com.emake</groupId>
+        <artifactId>forest</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
