--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github</groupId>
-    <artifactId>emake</artifactId>
+    <groupId>com.emake</groupId>
+    <artifactId>forest</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-
-    <name>emake</name>
+    <name>emake-cloud</name>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -166,11 +165,11 @@
 
 
     <!-- 使用aliyun镜像 -->
-    <repositories>
+<!--    <repositories>
         <repository>
             <id>aliyun</id>
             <name>aliyun</name>
             <url>http://maven.aliyun.com/nexus/content/groups/public</url>
         </repository>
-    </repositories>
+    </repositories>-->
 </project>
